--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.11.0",
     "axios": "^1.6.3",
+    "bull": "^4.12.0",
+    "bull-arena": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "sequelize": "^6.35.2",
-    "tedious": "^16.6.1"
+    "tedious": "^16.6.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
